--- a/scss/base/_button.scss
+++ b/scss/base/_button.scss
@@ -81,3 +81,9 @@ button[aria-disabled="true"],
     cursor: default;
     opacity: .7;
 }
+@media only screen and (min-width: 750px) {
+    .button--middle {
+        font-size: 1.8rem;
+        padding: 1.4rem 2.8rem;
+    }
+}
