--- a/sections/featured-hero.liquid
+++ b/sections/featured-hero.liquid
@@ -60,94 +60,113 @@
 {{ 'section-featured-hero.css' | asset_url | stylesheet_tag }}
 
 <div
-    id='Banner-{{ section.id }}'
-    class='featured-hero{% if adapt_height and image != blank %} banner--fill{% endif %}{% if video != blank %} has-video{% endif %}'
-    style='{{- styles -}}'
+    id="Banner-{{ section.id }}"
+    class="featured-hero{% if adapt_height and image != blank %} banner--fill{% endif %}{% if video != blank %} has-video{% endif %}"
+    style="{{- styles -}}"
 >
     {% if image != blank and video == blank %}
-        <picture class='featured-hero__media'>
+        <picture class="featured-hero__media">
             {% if mobile_image != blank %}
-                <source srcset='{{ image_mobile }}' media='(max-width: 749px)'>
+                <source srcset="{{ image_mobile }}" media="(max-width: 749px)">
             {% endif %}
 
             <img
-                srcset='{{ image_desktop }}'
-                src='{{ image_desktop | image_url: width: 1440 }}'
-                class='featured-hero__media--image'
-                sizes='100vw'
-                alt='{{ image.alt | escape }}'
-                width='{{ image.width }}'
-                height='{{ image.width | divided_by: image.aspect_ratio }}'
-                loading='lazy'
+                srcset="{{ image_desktop }}"
+                src="{{ image_desktop | image_url: width: 1440 }}"
+                class="featured-hero__media--image"
+                sizes="100vw"
+                alt="{{ image.alt | escape }}"
+                width="{{ image.width }}"
+                height="{{ image.width | divided_by: image.aspect_ratio }}"
+                loading="lazy"
             >
         </picture>
     {% endif %}
 
     {% if video != blank %}
-        <div class='video-media video-media--control-{{ hide_control }}'>
+        <div class="video-media video-media--control-{{ hide_control }}">
             {% case video_type %}
                 {% when 'files' %}
                     <video
-                        class='hero__media'
-                        autoplay='autoplay'
-                        playsinline='playsinline'
-                        loop='loop'
-                        muted='muted'
-                        width='1440'
+                        class="hero__media"
+                        autoplay="autoplay"
+                        playsinline="playsinline"
+                        loop="loop"
+                        muted="muted"
+                        width="1440"
                     >
-                        <source src='{{ video }}' type='video/mp4'>
+                        <source src="{{ video }}" type="video/mp4">
                     </video>
                 {% when 'vimeo' %}
                     <iframe
-                        src='https://player.vimeo.com/video/{{ video }}?autoplay={{ control_video }}&loop={{ loop_video }}&autopause=0&muted={{ control_audio }}&controls={{ hide_control }}&playsinline=1'
-                        class='js-vimeo'
-                        allow='autoplay; encrypted-media'
+                        src="https://player.vimeo.com/video/{{ video }}?autoplay={{ control_video }}&loop={{ loop_video }}&autopause=0&muted={{ control_audio }}&controls={{ hide_control }}&playsinline=1"
+                        class="js-vimeo"
+                        allow="autoplay; encrypted-media"
                         allowfullscreen
-                        frameborder='0'
+                        frameborder="0"
                     ></iframe>
                 {% when 'youtube' %}
                     <iframe
-                        src='https://www.youtube.com/embed/{{ video }}?autoplay={{ control_video }}&loop={{ loop_video }}&playlist={{ video}}&mute={{ control_audio }}&cc_load_policy=0&controls={{ hide_control }}&disablekb=0&fs=1&iv_load_policy=1&modestbranding=0&playsinline=1&rel=1&enablejsapi=1&widgetid=1'
-                        class='js-youtube'
-                        allow='autoplay; encrypted-media'
+                        src="https://www.youtube.com/embed/{{ video }}?autoplay={{ control_video }}&loop={{ loop_video }}&playlist={{ video}}&mute={{ control_audio }}&cc_load_policy=0&controls={{ hide_control }}&disablekb=0&fs=1&iv_load_policy=1&modestbranding=0&playsinline=1&rel=1&enablejsapi=1&widgetid=1"
+                        class="js-youtube"
+                        allow="autoplay; encrypted-media"
                         allowfullscreen
-                        frameborder='0'
+                        frameborder="0"
                     ></iframe>
             {% endcase %}
         </div>
     {% endif %}
 
-    <div class='featured-hero__content featured-hero__content--{{ layout_options }}  featured-hero__content--{{ block_position }} featured-hero__content--{{ layout_options }} featured-hero__content--{{ text_alignment }}'>
-        <div class='featured-hero__box featured-hero__box--{{ layout_options }}'>
+    <div class="featured-hero__content featured-hero__content--{{ layout_options }}  featured-hero__content--{{ block_position }} featured-hero__content--{{ layout_options }} featured-hero__content--{{ text_alignment }}">
+        <div class="featured-hero__box featured-hero__box--{{ layout_options }}">
             {% for block in section.blocks %}
-                {% assign heading = block.settings.heading %}
-                {% assign text = block.settings.text %}
-                {% assign button_label = block.settings.button_label %}
-                {% assign button_link = block.settings.button_link %}
+                {% liquid
+                    assign sub_heading = block.settings.sub_heading
+                    assign heading = block.settings.heading
+                    assign text = block.settings.text
+                    assign button_label = block.settings.button_label
+                    assign button_link = block.settings.button_link
+                    assign button_label_second = block.settings.button_label_second
+                    assign button_link_second = block.settings.button_link_second
+                %}
 
                 {% case block.type %}
                     {% when 'heading' %}
-                        <h2 class='featured-hero__heading h1' {{ block.shopify_attributes }}>
+                        <h5 class="featured-hero__sub_heading h5 section-move-top" {{ block.shopify_attributes }}>
+                            {{ sub_heading | escape }}
+                        </h5>
+                        <h2 class="featured-hero__heading h0 section-move-top" {{ block.shopify_attributes }}>
                             {{ heading | escape }}
                         </h2>
                     {% when 'text' %}
                         <div
-                            class='featured-hero__text {% if layout_options == 'layout_full' %}rte--large{% else %}rte{%- endif -%}'
+                            class="featured-hero__text {% if layout_options == 'layout_full' %}rte--large {% else %}rte {% endif %} section-move-top"
                             {{ block.shopify_attributes }}
                         >
                             {{ text }}
                         </div>
                     {% when 'buttons' %}
-                        <div class='featured-hero__button' {{ block.shopify_attributes }}>
+                        <div class="featured-hero__button section-move-top" {{ block.shopify_attributes }}>
                             {% if button_label != blank and button_link != blank %}
                                 <a
-                                    href='{{ button_link }}'
-                                    class='button button--primary button--middle'
+                                    href="{{ button_link }}"
+                                    class="button button--primary button--middle"
                                     {% if button_link == blank %}
-                                        aria-disabled='true'
+                                        aria-disabled="true"
                                     {% endif %}
                                 >
                                     {{ button_label | escape }}
+                                </a>
+                            {% endif %}
+                            {% if button_label_second != blank and button_link_second != blank %}
+                                <a
+                                    href="{{ button_link_second }}"
+                                    class="button button--secondary button--middle"
+                                    {% if button_link_second == blank %}
+                                        aria-disabled="true"
+                                    {% endif %}
+                                >
+                                    {{ button_label_second | escape }}
                                 </a>
                             {% endif %}
                         </div>
@@ -357,6 +376,12 @@
             "settings": [
                 {
                     "type": "text",
+                    "id": "sub_heading",
+                    "default": "Image banner",
+                    "label": "Sub Heading"
+                },
+                {
+                    "type": "text",
                     "id": "heading",
                     "default": "Image banner",
                     "label": "Heading"
@@ -385,13 +410,25 @@
                     "type": "text",
                     "id": "button_label",
                     "default": "Button label",
-                    "label": "Button label",
+                    "label": "Button label first",
                     "info": "Leave the label blank to hide the button."
                 },
                 {
                     "type": "url",
                     "id": "button_link",
-                    "label": "Button link"
+                    "label": "Button link first"
+                },
+                {
+                    "type": "text",
+                    "id": "button_label_second",
+                    "default": "Button label",
+                    "label": "Button label second",
+                    "info": "Leave the label blank to hide the button."
+                },
+                {
+                    "type": "url",
+                    "id": "button_link_second",
+                    "label": "Button link second"
                 }
             ]
         }
