--- a/scss/sections/section-footer.scss
+++ b/scss/sections/section-footer.scss
@@ -3,6 +3,7 @@
     background-color: var(--footer-background-color);
     padding-top: var(--footer-pad-top);
     padding-bottom: var(--footer-pad-bot);
+    overflow: hidden;
 }
 
 .footer__title {
