--- a/scss/sections/section-featured-list-collections.scss
+++ b/scss/sections/section-featured-list-collections.scss
@@ -1,288 +1,107 @@
-.featured-hero {
-    display: flex;
-    flex-direction: column;
-    min-height: initial;
-    overflow: hidden;
-    position: relative;
-}
 
-.featured-hero .video-media {
-    height: 100%;
-}
-
-.featured-hero .video-media { 
-    position: relative;
-    padding-bottom: 56.25%; 
-    height: 0; overflow: hidden; 
-    max-width: 100%;
-    width: 100%; 
-}
-
-@media screen and (min-width: 750px) {
-    .featured-hero .video-media { 
-        position: absolute;
-        left: 0;
-        top: 0; 
+.collections-default__head {
+    margin-bottom: 4rem;
+    &.head-alignment--left {
+        text-align: left;
+    }
+    &.head-alignment--right {
+        text-align: right;
+    }
+    &.head-alignment--center {
+        text-align: center;
     }
 }
 
-.featured-hero .video-media iframe, 
-.featured-hero .video-media video { 
-    position: absolute; 
-    top: 0; left: 0; 
-    width: 100%; 
-    height: 100%;
-    border: none; 
+.featured-list-collections__sub_heading {
+    color: var(--sub_title_color-list-collections-default);
 }
 
-.featured-hero__media.has-video {
-    visibility: hidden;
+.featured-list-collections__heading {
+    color: var(--title-color-list-collections-default);
+    margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 750px) {
-    .featured-hero {
-        min-height: 45rem;
-        flex-direction: row;
-    }
-
-    .featured-hero::before {
-        content: '';
-        padding-bottom: 52.8%;
-    }
-
-    .featured-hero.has-video {
-        min-height: 40rem;
-        flex-direction: row;
+.featured-list-collections__text {
+    p {
+        margin-bottom: 0;
     }
 }
 
-.featured-hero__media {
-    height: 100%;
-    left: 0;
-    top: 0;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-    padding-top: 85%;
-    animation: reveal 10s linear 3s infinite alternate;
+// style default
 
-}
+.collections-default {
+    color: var(--text-color-list-collections-default);
+    background: var(--background-color-list-collections-default);
+    padding-top: var(--pad-top-list-collections-default);
+    padding-bottom: var(--pad-bot-list-collections-default);
 
-.featured-hero__media img {
-    display: block;
-    max-width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-@media screen and (min-width: 750px) {
-    .featured-hero__media {
-        position: absolute;
-        height: 100%;
-        padding-top: 0;
+    .list-collections-grid {
+        margin-bottom: -3rem;
     }
 
-    .banner--fill {
-        min-height: auto;
-        height: calc(100vh - 60px);
-    }
-}
-
-@media screen and (max-width: 749px) {
-    .banner--fill .featured-hero__media {
-        min-height: auto;
-    }
-}
-
-.featured-hero__content {
-    padding: 0;
-    display: flex;
-    position: relative;
-    width: 100%;
-}
-
-.featured-hero__content--left {text-align: left;}
-.featured-hero__content--right {text-align: right;}
-.featured-hero__content--center {text-align: center;}
-
-.featured-hero__content::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: absolute;
-    left: 0;
-    top:0;
-    opacity: var(--background-color-opacity-hero);
-}
-
-@media screen and (max-width: 749px) {
-    .featured-hero__content { 
-        background-color: var(--background-color-block-hero);
-    }
-}
-
-.featured-hero__content--layout_part::before {
-    background-color: var(--background-color-block-hero);
-}
-
-.featured-hero__content--layout_full::before {
-    background-color: var(--background-color-hero);
-}
-
-@media screen and (min-width: 750px) {
-    .featured-hero__content--top-middle,
-    .featured-hero__content--top-left,
-    .featured-hero__content--top-right {
-        align-items: flex-start;
+    .list-collections-grid__item {
+        padding-bottom: 3rem;
     }
 
-    .featured-hero__content--middle-middle,
-    .featured-hero__content--middle-left,
-    .featured-hero__content--middle-right {
-        align-items: center;
+    .card-collection__media-wrapper {
+        margin-bottom: 2rem;
     }
 
-    .featured-hero__content--top-middle,
-    .featured-hero__content--middle-middle,
-    .featured-hero__content--bottom-middle {
-        justify-content: center;
-        margin: 0 auto;
+    .card-collection__media {
+        transition: all .3s ease;
+        a {
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: block;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+        }
+        &:hover {
+            box-shadow: 0 0 15px rgba(0,0,0, .2);
+            .card-collection__image {
+                transform: scale(1.1);
+            }
+        }
     }
 
-    .featured-hero__content--bottom-middle,
-    .featured-hero__content--bottom-left,
-    .featured-hero__content--bottom-right {
-        align-items: flex-end;
+    .card-collection__image {
+        transition: all .3s ease;
+        transform: scale(1);
     }
 
-    .featured-hero__content--top-left,
-    .featured-hero__content--middle-left,
-    .featured-hero__content--bottom-left {
-        justify-content: flex-start;
-    }
+    .card-collection__content {
+        &.card-collection__content--left {
+            text-align: left;
+        }
 
-    .featured-hero__content--top-right,
-    .featured-hero__content--middle-right,
-    .featured-hero__content--bottom-right {
-        justify-content: flex-end;
-        margin-left: auto;
-    }
+        &.card-collection__content--right {
+            text-align: right;
+        }
 
-    .featured-hero__content--layout_part {
-        width: 50%;
-    }
-}
-@media screen and (min-width: 990px) {
-    .featured-hero__content--layout_part {
-        width: 34.6%;
+        &.card-collection__content--center {
+            text-align: center;
+        }
+
+        h3 {
+            margin-bottom: .5rem;
+            a {
+                text-decoration: none;
+            }
+        }
+
+        h5 {
+            font-weight: 400;
+            margin-bottom: 0;
+            color: var(--text-color-list-collections-default);;
+        }
     }
 }
 
-.featured-hero__box {
-    border: 0;
-    padding: 3rem 2rem 3rem;
-    position: relative;
-    height: fit-content;
-    align-items: center;
-    width: 100%;
-}
-
-.featured-hero__box > * + .featured-hero__button {
-    margin-top: 2.4rem;
-}
-
-.featured-hero__button a.button--primary {
-    background-color: var(--btn_bg_color-text-image);
-    color: var(--btn_link_color-text-image);
-    margin-right: 10px;
-}
-
-.featured-hero__button a.button--primary:hover,
-.featured-hero__button a.button--primary:focus {
-    background-color: var(--btn_bg_color_hover-text-image);
-    color: var(--btn_link_color_hover-text-image);
-}
-
-
-@media screen and (min-width: 750px) {
-    .featured-hero__box > * + .featured-hero__button {
-        margin-top: 2.4rem;
-    }
-}
-
-.featured-hero__content .button {
-    height: auto;
-    text-decoration: none;
-}
-
-.featured-hero__box > * + .featured-hero__text {
-    margin-top: 1.6rem;
-}
-
-@media screen and (min-width: 750px) {
-    .featured-hero__box > * + .featured-hero__text {
-        margin-top: 1.4rem;
-    }
-}
-
-.featured-hero__box > * + * {
-    margin-top: 1rem;
-}
-
-.featured-hero__box > *:first-child {
-    margin-top: 0;
-}
-
-@media screen and (max-width: 749px) {
-    .featured-hero__content .button {
-        flex-grow: 1;
-    }
-}
-
-@media screen and (min-width: 750px) {
-    .featured-hero__box {
-        padding: 6rem;
-        width: calc(var(--text-width-block-hero) + 100px);
-    }
-
-    .featured-hero__box > .featured-hero__button:only-child .button {
-        margin-top: 0;
-    }
-
-    .featured-hero__box.featured-hero__box--layout_part {
-        width: 100%;
-        padding: 4rem 3.4rem;
-    }
-}
-
-.featured-hero__heading {
-    word-wrap: break-word;
-    color: var(--title-color-hero);
-}
-
-.featured-hero__sub_heading {
-    color: var(--text-color-hero);
-}
-
-.featured-hero__text > * {
-    word-wrap: break-word;
-    color: var(--text-color-hero);
-}
-
-.featured-hero__heading {
-    margin-bottom: 0;
-}
-
-@keyframes reveal {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1.05);
+@media screen and (max-width: 767px) {
+    .list-collections-grid {
+        overflow: auto;
+        flex-wrap: nowrap;
     }
 }
