--- a/sections/featured-hero.liquid
+++ b/sections/featured-hero.liquid
@@ -72,7 +72,7 @@
 
             <img
                 srcset="{{ image_desktop }}"
-                src="{{ image_desktop | image_url: width: 1440 }}"
+                src="{{ image | image_url: width: 1440 }}"
                 class="featured-hero__media--image"
                 sizes="100vw"
                 alt="{{ image.alt | escape }}"
@@ -290,7 +290,7 @@
         },
         {
             "type": "paragraph",
-            "content": "Style option"
+            "content": "Style options"
         },
         {
             "type": "color",
