add grid style collection

--- a/sections/featured-list-collections.liquid
+++ b/sections/featured-list-collections.liquid
@@ -80,7 +80,7 @@
                     "type": "range",
                     "id": "columns_desktop",
                     "min": 2,
-                    "max": 4,
+                    "max": 6,
                     "step": 1,
                     "default": 4,
                     "label": "Number of columns on desktop"
@@ -256,7 +256,7 @@
                     "type": "range",
                     "id": "columns_desktop",
                     "min": 2,
-                    "max": 4,
+                    "max": 6,
                     "step": 1,
                     "default": 4,
                     "label": "Number of columns on desktop"
@@ -351,6 +351,20 @@
                 {
                     "type": "paragraph",
                     "content": "Style options content collection"
+                },
+                {
+                    "type": "color",
+                    "id": "overlay_color",
+                    "label": "Background Overlay Color"
+                },
+                {
+                    "type": "range",
+                    "label": "Overlay opacity",
+                    "id": "opacity",
+                    "min": 1,
+                    "max": 10,
+                    "step": 1,
+                    "default": 1
                 },
                 {
                     "type": "color",
