--- a/scss/sections/section-featured-list-collections.scss
+++ b/scss/sections/section-featured-list-collections.scss
@@ -1,15 +1,17 @@
+.head-alignment--left {
+    text-align: left;
+}
 
-.collections-default__head {
+.head-alignment--right {
+    text-align: right;
+}
+
+.head-alignment--center {
+    text-align: center;
+}
+
+.collections-list__head {
     margin-bottom: 4rem;
-    &.head-alignment--left {
-        text-align: left;
-    }
-    &.head-alignment--right {
-        text-align: right;
-    }
-    &.head-alignment--center {
-        text-align: center;
-    }
 }
 
 .featured-list-collections__sub_heading {
@@ -41,6 +43,20 @@
 
     .list-collections-grid__item {
         padding-bottom: 3rem;
+    }
+    
+    @media screen and (min-width: 768px) {
+        .col-md-custom {
+            flex: auto;
+            width: 33.3%;
+        }
+    }
+
+    @media screen and (min-width: 991px) {
+        .col-lg-custom {
+            flex: 0 0 auto;
+            width: 20%;
+        }
     }
 
     .card-collection__media-wrapper {
@@ -94,7 +110,146 @@
         h5 {
             font-weight: 400;
             margin-bottom: 0;
-            color: var(--text-color-list-collections-default);;
+            color: var(--text-color-list-collections-default);
+        }
+    }
+}
+
+// style default
+
+.collections-grid {
+    color: var(--text-color-list-collections-grid);
+    background: var(--background-color-list-collections-grid);
+    padding-top: var(--pad-top-list-collections-grid);
+    padding-bottom: var(--pad-bot-list-collections-grid);
+
+    .list-collections-grid {
+        margin-bottom: -3rem;
+    }
+
+    .list-collections-grid__item {
+        padding-bottom: 3rem;
+    }
+
+    @media screen and (min-width: 768px) {
+        .col-md-custom {
+            flex: auto;
+            width: 33.3%;
+        }
+    }
+
+    @media screen and (min-width: 991px) {
+        .col-lg-custom {
+            flex: 0 0 auto;
+            width: 20%;
+        }
+    }  
+
+    .card-collection:hover {
+        .card-collection__content {
+            h3 span {
+                color: var(--link-hover-color-list-collections-grid);
+            }
+            h3 span:after {
+                background: var(--color-primary);
+                opacity: .8;
+            }
+        }
+    }
+
+    .card-collection__media-wrapper {
+        margin-bottom: 2rem;
+    }
+
+    .card-collection__media {
+        transition: all .3s ease;
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: block;
+            width: 100%;
+            height: 100%;
+            background: var(--overlay-color-list-collections-grid);
+            opacity: var(--overlay_opacity-list-collections-grid);
+            z-index: 0;
+        }
+        a {
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: block;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+        }
+        &:hover {
+            box-shadow: 0 0 15px rgba(0,0,0, .2);
+            .card-collection__image {
+                transform: scale(1.1);
+            }
+        }
+    }
+
+    .card-collection__image {
+        transition: all .3s ease;
+        transform: scale(1);
+    }
+
+    .card-collection {
+        position: relative;
+    }
+
+    .card-collection__content {
+        &.card-collection__content--left {
+            text-align: left;
+        }
+
+        &.card-collection__content--right {
+            text-align: right;
+        }
+
+        &.card-collection__content--center {
+            text-align: center;
+        }
+
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        padding: 2rem;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        h3 {
+            margin-bottom: .5rem;
+            span {
+                display: inline-block;
+                padding: 1rem 2rem;
+                text-decoration: none;
+                color: var(--link-color-list-collections-grid);
+                position: relative;
+                transition: all .3s ease;
+                &:after {
+                    content: "";
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                    background: var(--background-cover-color-list-collections-grid);
+                    border-radius: var(--button-border-radius);
+                    opacity: .5;
+                    z-index: -1;
+                    transition: all .3s ease;
+                }
+            }
+        }
+
+        h5 {
+            font-weight: 400;
+            margin-bottom: 0;
+            color: var(--count-color-list-collections-grid);
         }
     }
 }
