--- a/scss/sections/section-featured-list-collections-grid.scss
+++ b/scss/sections/section-featured-list-collections-grid.scss
@@ -1,127 +1,50 @@
-.head-alignment--left {
-    text-align: left;
-}
-
-.head-alignment--right {
-    text-align: right;
-}
-
-.head-alignment--center {
-    text-align: center;
-}
-
-.collections-list__head {
-    margin-bottom: 4rem;
-}
-
-.featured-list-collections__sub_heading {
-    color: var(--sub_title_color-list-collections-default);
-}
-
-.featured-list-collections__heading {
-    color: var(--title-color-list-collections-default);
-    margin-bottom: 1rem;
-}
-
-.featured-list-collections__text {
-    p {
-        margin-bottom: 0;
-    }
-}
-
-// style default
-
-.collections-default {
-    color: var(--text-color-list-collections-default);
-    background: var(--background-color-list-collections-default);
-    padding-top: var(--pad-top-list-collections-default);
-    padding-bottom: var(--pad-bot-list-collections-default);
-
-    .list-collections-grid {
-        margin-bottom: -3rem;
-    }
-
-    .list-collections-grid__item {
-        padding-bottom: 3rem;
-    }
-    
-    @media screen and (min-width: 768px) {
-        .col-md-custom {
-            flex: auto;
-            width: 33.3%;
-        }
-    }
-
-    @media screen and (min-width: 991px) {
-        .col-lg-custom {
-            flex: 0 0 auto;
-            width: 20%;
-        }
-    }
-
-    .card-collection__media-wrapper {
-        margin-bottom: 2rem;
-    }
-
-    .card-collection__media {
-        transition: all .3s ease;
-        a {
-            position: absolute;
-            left: 0;
-            top: 0;
-            display: block;
-            z-index: 1;
-            width: 100%;
-            height: 100%;
-        }
-        &:hover {
-            box-shadow: 0 0 15px rgba(0,0,0, .2);
-            .card-collection__image {
-                transform: scale(1.1);
-            }
-        }
-    }
-
-    .card-collection__image {
-        transition: all .3s ease;
-        transform: scale(1);
-    }
-
-    .card-collection__content {
-        &.card-collection__content--left {
-            text-align: left;
-        }
-
-        &.card-collection__content--right {
-            text-align: right;
-        }
-
-        &.card-collection__content--center {
-            text-align: center;
-        }
-
-        h3 {
-            margin-bottom: .5rem;
-            a {
-                text-decoration: none;
-            }
-        }
-
-        h5 {
-            font-weight: 400;
-            margin-bottom: 0;
-            color: var(--text-color-list-collections-default);
-        }
-    }
-}
-
-// style default
+// style grid
 
 .collections-grid {
+    .head-alignment--left {
+        text-align: left;
+    }
+    
+    .head-alignment--right {
+        text-align: right;
+    }
+    
+    .head-alignment--center {
+        text-align: center;
+    }
+    
+    .collections-list__head {
+        margin-bottom: 4rem;
+    }
+    
+    .featured-list-collections__sub_heading {
+        color: var(--sub_title_color-list-collections-grid);
+    }
+    
+    .featured-list-collections__heading {
+        color: var(--title-color-list-collections-grid);
+        margin-bottom: 1rem;
+    }
+    
+    .featured-list-collections__text {
+        p {
+            margin-bottom: 0;
+        }
+    }
+
     color: var(--text-color-list-collections-grid);
     background: var(--background-color-list-collections-grid);
     padding-top: var(--pad-top-list-collections-grid);
     padding-bottom: var(--pad-bot-list-collections-grid);
+
+    .featured-list-collections__sub_heading {
+        color: var(--sub_title_color-list-collections-grid);
+    }
+    
+    .featured-list-collections__heading {
+        color: var(--title-color-list-collections-grid);
+        margin-bottom: 1rem;
+    }
 
     .list-collections-grid {
         margin-bottom: -3rem;
@@ -155,10 +78,6 @@
                 opacity: .8;
             }
         }
-    }
-
-    .card-collection__media-wrapper {
-        margin-bottom: 2rem;
     }
 
     .card-collection__media {
@@ -252,11 +171,13 @@
             color: var(--count-color-list-collections-grid);
         }
     }
-}
 
-@media screen and (max-width: 767px) {
-    .list-collections-grid {
-        overflow: auto;
-        flex-wrap: nowrap;
+    @media screen and (max-width: 767px) {
+        .list-collections-grid {
+            overflow: auto;
+            flex-wrap: nowrap;
+            padding-top: 15px;
+            margin-top: -15px;
+        }
     }
 }
