--- a/scss/sections/section-featured-list-collections-block-menu.scss
+++ b/scss/sections/section-featured-list-collections-block-menu.scss
@@ -1,6 +1,8 @@
+
+
 // style block menu
 
-.collections-block-menu {
+.collections-menu {
     .head-alignment--left {
         text-align: left;
     }
@@ -18,11 +20,11 @@
     }
     
     .featured-list-collections__sub_heading {
-        color: var(--sub_title_color-list-collections-collage);
+        color: var(--sub_title_color-list-collections-menu);
     }
     
     .featured-list-collections__heading {
-        color: var(--title-color-list-collections-collage);
+        color: var(--title-color-list-collections-menu);
         margin-bottom: 1rem;
     }
     
@@ -31,21 +33,12 @@
             margin-bottom: 0;
         }
     }
-
-    color: var(--text-color-list-collections-collage);
-    background: var(--background-color-list-collections-collage);
-    padding-top: var(--pad-top-list-collections-collage);
-    padding-bottom: var(--pad-bot-list-collections-collage);
-
-    .featured-list-collections__sub_heading {
-        color: var(--sub_title_color-list-collections-collage);
-    }
     
-    .featured-list-collections__heading {
-        color: var(--title-color-list-collections-collage);
-        margin-bottom: 1rem;
-    }
-
+    color: var(--text-color-list-collections-menu);
+    background: var(--background-color-list-collections-menu);
+    padding-top: var(--pad-top-list-collections-menu);
+    padding-bottom: var(--pad-bot-list-collections-menu);
+    
     .list-collections-grid {
         margin-bottom: -3rem;
     }
@@ -53,7 +46,7 @@
     .list-collections-grid__item {
         padding-bottom: 3rem;
     }
-
+    
     @media screen and (min-width: 768px) {
         .col-md-custom {
             flex: auto;
@@ -66,18 +59,6 @@
             flex: 0 0 auto;
             width: 20%;
         }
-    }  
-
-    .card-collection:hover {
-        .card-collection__content {
-            h3 span {
-                color: var(--link-hover-color-list-collections-collage);
-            }
-            h3 span:after {
-                background: var(--color-primary);
-                opacity: .8;
-            }
-        }
     }
 
     .card-collection__media-wrapper {
@@ -86,18 +67,6 @@
 
     .card-collection__media {
         transition: all .3s ease;
-        &::after {
-            content: "";
-            position: absolute;
-            left: 0;
-            top: 0;
-            display: block;
-            width: 100%;
-            height: 100%;
-            background: var(--overlay-color-list-collections-collage);
-            opacity: var(--overlay_opacity-list-collections-collage);
-            z-index: 0;
-        }
         a {
             position: absolute;
             left: 0;
@@ -120,10 +89,6 @@
         transform: scale(1);
     }
 
-    .card-collection {
-        position: relative;
-    }
-
     .card-collection__content {
         &.card-collection__content--left {
             text-align: left;
@@ -137,90 +102,19 @@
             text-align: center;
         }
 
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        padding: 1rem;
-        transform: translate(-50%, -50%);
-        width: 100%;
         h3 {
             margin-bottom: .5rem;
-            span {
-                display: inline-block;
-                padding: 1rem 2rem;
+            a {
                 text-decoration: none;
-                color: var(--link-color-list-collections-collage);
-                position: relative;
-                transition: all .3s ease;
-                &:after {
-                    content: "";
-                    position: absolute;
-                    left: 0;
-                    top: 0;
-                    display: block;
-                    width: 100%;
-                    height: 100%;
-                    background: var(--background-cover-color-list-collections-collage);
-                    border-radius: var(--button-border-radius);
-                    opacity: .5;
-                    z-index: -1;
-                    transition: all .3s ease;
-                }
             }
         }
 
         h5 {
             font-weight: 400;
             margin-bottom: 0;
-            color: var(--count-color-list-collections-collage);
+            color: var(--text-color-list-collections-menu);
         }
     }
-    
-    @media screen and (min-width: 991px) {
-        .list-collections-grid__item--left,
-        .list-collections-grid__item--right {
-            .row > div .card-collection {
-                padding-bottom: 1rem;
-                .media__size--portrait {
-                    margin-bottom: 2.8rem;
-                }
-            }
-        }
-    }
-    .order-alignment--center {
-        .list-collections-grid__item--left {
-            order: 1;
-        }
-        .list-collections-grid__item--center {
-            order: 2;
-        }
-        .list-collections-grid__item--right {
-            order: 3;
-        }
-    }
-    .order-alignment--left {
-        .list-collections-grid__item--left {
-            order: 2;
-        }
-        .list-collections-grid__item--center {
-            order: 1;
-        }
-        .list-collections-grid__item--right {
-            order: 3;
-        }
-    }
-    .order-alignment--right {
-        .list-collections-grid__item--left {
-            order: 1;
-        }
-        .list-collections-grid__item--center {
-            order: 3;
-        }
-        .list-collections-grid__item--right {
-            order: 2;
-        }
-    }
-
     @media screen and (max-width: 767px) {
         .list-collections-grid {
             overflow: auto;
